website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.2.1/api/plugins/plugin-sitemap.mdx
---
sidebar_position: 10
slug: /api/plugins/@docusaurus/plugin-sitemap
---

# 📦 plugin-sitemap

import APITable from '@site/src/components/APITable';

此插件會為您的網站生成站點地圖，使搜索引擎爬蟲能更精確地爬取您的網站內容。

:::warning[僅限生產環境]

此插件在開發環境中始終處於非活躍狀態，**僅在生產環境生效**，因其運作機制基於構建輸出結果。

:::

## 安裝 {#installation}

```bash npm2yarn
npm install --save @docusaurus/plugin-sitemap
```

:::tip

若您使用 `@docusaurus/preset-classic` 預設配置，則無需額外安裝此插件。

您可透過[預設選項](../../using-plugins.mdx#docusauruspreset-classic)配置此插件。

:::

## 配置 {#configuration}

可接受字段：

```mdx-code-block
<APITable>
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `lastmod` | `'date' \| 'datetime' \| null` | `null` | `date` is YYYY-MM-DD. `datetime` is a ISO 8601 datetime. `null` is disabled. See [sitemap docs](https://www.sitemaps.org/protocol.html#xmlTagDefinitions). |
| `changefreq` | `string \| null` | `'weekly'` | See [sitemap docs](https://www.sitemaps.org/protocol.html#xmlTagDefinitions) |
| `priority` | `number \| null` | `0.5` | See [sitemap docs](https://www.sitemaps.org/protocol.html#xmlTagDefinitions) |
| `ignorePatterns` | `string[]` | `[]` | A list of glob patterns; matching route paths will be filtered from the sitemap. Note that you may need to include the base URL in here. |
| `filename` | `string` | `sitemap.xml` | The path to the created sitemap file, relative to the output directory. Useful if you have two plugin instances outputting two files. |

```mdx-code-block
</APITable>
```

:::info

此插件同時遵循以下站點配置：

- [`noIndex`](../docusaurus.config.js.mdx#noIndex)：若啟用則不會生成站點地圖
- [`trailingSlash`](../docusaurus.config.js.mdx#trailingSlash)：決定站點地圖中的URL是否包含尾部斜線

:::

:::note[關於 `lastmod`]

`lastmod` 選項僅在插件提供[路由元數據](../plugin-methods/lifecycle-apis.mdx#addRoute)屬性 `sourceFilePath` 和/或 `lastUpdatedAt` 時，才會輸出站點地圖的 `<lastmod>` 標籤。

所有官方內容插件都會為基於內容文件（Markdown、MDX或React頁面組件）的路由提供元數據，但第三方插件作者可能未提供此信息，此時插件將無法為其路由輸出 `<lastmod>` 標籤。

:::

### 配置範例 {#ex-config}

您可透過預設選項或插件選項配置此插件。

:::tip

多數Docusaurus用戶透過預設選項配置此插件。

:::

```js config-tabs
// Preset Options: sitemap
// Plugin Options: @docusaurus/plugin-sitemap

const config = {
  lastmod: 'date',
  changefreq: 'weekly',
  priority: 0.5,
  ignorePatterns: ['/tags/**'],
  filename: 'sitemap.xml',
};
```

您可在 `/sitemap.xml` 找到生成的站點地圖。